# Simulation-Engine

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_simulation.py  setup.sh  simulation_engine_entrypoint.py
simulation_classes/: parents.py  springs.py
simulation_engine/classes/: __init__.py  birds.py  evac.py  nbody.py  parents.py  pinball.py  pool.py  springs.py
simulation_engine/core/: environment.py  manager.py
simulation_engine/main/: entrypoint.py  simulation_engine_entrypoint.py
simulation_engine/types/: birds.py  evac.py  nbody.py  pool.py  springs.py
simulation_engine/utils/: manager.py
tests/: test_entrypoint.py  test_input_args.py  test_integration.py
