[project]
name = "a-sample-project"
version = "1.0.0"
description = "Simulation Engine" # TODO
authors = [{name="Ben Winstanley", email="benjamin.winstanley.007@gmail.com"}]
requires-python = ">=3.9"
dependencies = [
    "contourpy==1.3.0",
    "cycler==0.12.1",
    "fonttools==4.58.2",
    "importlib_resources==6.5.2",
    "kiwisolver==1.4.7",
    "markdown-it-py==3.0.0",
    "matplotlib==3.9.4",
    "mdurl==0.1.2",
    "numpy==1.24.1",
    "opencv-python==4.11.0.86",
    "packaging==25.0",
    "pathvalidate==3.2.3",
    "pillow==11.2.1",
    "Pygments==2.19.1",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "rich==14.0.0",
    "scipy==1.13.1",
    "six==1.17.0",
    "tqdm==4.67.1",
    "typing_extensions==4.14.0",
    "zipp==3.22.0",
]


[project.scripts]
bengine = "simulation_engine.main.simulation_engine_entrypoint:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
