[project]
name = "bengine"
version = "1.0.0"
description = "General physics simulation engine for force-based particle models, built from scratch in Python."
authors = [{name="Ben Winstanley", email="benjamin.winstanley.007@gmail.com"}]
requires-python = ">=3.9"
dependencies = [
    "matplotlib==3.9.4",
    "numpy==1.24.1",
    "rich==14.0.0",
    "tqdm==4.67.1",
    "opencv-python"
]

[project.scripts]
bengine = "simulation_engine.main.entrypoint:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
